# scherzo

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build-example-plugin.sh  example-with-plugin.toml  example.toml  flake.nix  rust-toolchain  tsconfig.json
.github/config/: cargo-deny.toml
.github/workflows/: ci.yml  dependencies.yml
crates/example-plugin/: Cargo.toml  README.md  build.rs
crates/example-plugin/src/: lib.rs
crates/scherzo/: Cargo.toml
crates/scherzo-compile/: Cargo.toml
crates/scherzo-compile/src/: lib.rs
crates/scherzo-core/: Cargo.toml
crates/scherzo-core/src/: itersolve.rs  kinematics.rs  lib.rs  step_compressor.rs  trap_queue.rs
crates/scherzo-core/src/kinematics/: cartesian.rs  corexy.rs  corexz.rs  delta.rs  deltesian.rs  extruder.rs  generic.rs  idex.rs  polar.rs  rotary_delta.rs  shaper.rs  winch.rs
crates/scherzo-gcode/: Cargo.toml  build.rs
crates/scherzo-gcode/src/: lexer.rs  lib.rs  parser.rs  testing.rs
crates/scherzo-gcode/test-data/: checksum.gcode  checksum.parsed.snap  checksum.tokens.snap  comments_and_strings.gcode  comments_and_strings.parsed.snap  comments_and_strings.tokens.snap  simple.gcode  simple.parsed.snap  simple.tokens.snap
crates/scherzo/src/: config.rs  lib.rs  main.rs  plugin.rs  server.rs  wasm_util.rs
crates/scherzo/src/cli/: compile.rs  mod.rs  start.rs
crates/scherzo/tests/: plugin_config_test.rs  plugin_e2e_test.rs
crates/scherzo/wit/: plugin.wit
docs/: design.md  plugin-config-system.md  plugin-configuration.md
hooks/: pre-commit
tools/plugin-builder/: Cargo.toml
tools/plugin-builder/src/: main.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  main.rs
xtask/src/commands/: build.rs  ci.rs  common.rs  fmt.rs  hooks.rs  precommit.rs  test.rs
