[workspace]
resolver = "3"

members = ["crates/scherzo", "crates/scherzo-*", "crates/example-plugin", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/camshaft/scherzo"

[workspace.dependencies]
anyhow = "1"
hashbrown = "0.16"
miette = "7.6"
rustc-hash = "2.1"
bach = "0.1.0"
bindgen = "0.71"
bolero = "0.13"
bolero-generator = "0.13"
bytes = "1.0"
cc = "1.0"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
futures = "0.3"
heck = "0.5"
insta = "1.0"
libc = "0.2"
linkme = "0.3"
lsp-types = "0.94"
parking_lot = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0"
toml = "0.9"
tokio = { version = "1.0" }
tower = "0.5"
tower-http = "0.6"
axum = "0.8"
base64 = "0.22"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-encoder = "0.243"
wasmparser = "0.243"
wasmprinter = "0.243"
wasmtime = "40"
wasmtime-wasi = "40"
wat = "1.243"
wit-bindgen = "0.38"
wit-component = "0.243"
wit-encoder = "0.243"
wit-parser = "0.243"
rustyline = "17.0"
dirs = "6.0"
salsa = "0.24"
