[package]
name = "scherzo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bcrypt.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
scherzo-compile = { path = "../scherzo-compile" }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["auth", "fs", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wasm-encoder.workspace = true
wasmparser.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
tempfile = "3"
wat.workspace = true
